--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RSS-агрегатор</title>
   </head>
   <body>
     <script src="./src/index.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>Хекслет — практические курсы по программированию. Мы помогаем новичкам стать профессиональными программистами, а опытным разработчикам получать новые знания и расти профессионально.</p>
+          <p>Мы считаем, что настоящий программист должен понимать, как работает компьютер, и обладать вычислительным мышлением. Он должен видеть проблему, а не задание. Должен уметь анализировать и рассуждать на уровне проблемы и выше, а не только на уровне кода.</p>
+          <p>При сегодняшнем обилии учебных материалов, курсов и книг, главный вопрос, который встает перед новичком, это не «где учиться?», а «что и в каком порядке учить?». Существует множество мнений по этому поводу. Кто-то советует начинать с математики, кто-то советует конкретные языки и технологии.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
