--- a/template.html
+++ b/template.html
@@ -1,9 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Webpack Package</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RSS-агрегатор</title>
   </head>
   <body>
-    <div id="point"></div>
+    <script src="./src/index.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="h1">Column</p></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="h3">Column</p></div>
+      </div>
+    </div>
   </body>
 </html>
