--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <p class="h1">Column</p></div>
+          <p class="h1">Column6 </p></div>
       </div>
     </div>
     <div class="container">
