--- a/template.html
+++ b/template.html
@@ -7,16 +7,13 @@
   </head>
   <body>
     <script src="./src/index.js"></script>
-    <div class="container">
+    <div class="container bg-secondary">
       <div class="row">
-        <div class="col">
-          <p class="h1">Column6 </p></div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <p class="h3">Column</p></div>
+        <div class="col mt-5">
+          <h1 class="text-white">RSS агрегатор</h1>
+          <p class="text-white">Начните читать RSS сегодня! Это легко, это красиво.</p>
+          <form><input type="text"></input><input type="submit" class="btn btn-primary"></input></form>
+        </div>
       </div>
     </div>
   </body>
