--- a/template.html
+++ b/template.html
@@ -6,14 +6,32 @@
     <title>RSS-агрегатор</title>
   </head>
   <body>
-    <script src="./src/index.js"></script>
-    <div class="container bg-secondary">
-      <div class="row">
-        <div class="col mt-5">
+    <script type="module" src="./src/index.js"></script>
+    <div class="container-fluid bg-secondary bg-gradient p-4">
+      <div class="row offset-md-2">
+        <div class="col">
+          <button type="button" class="btn btn-outline-light btn-sm btn-lan">English</button>
+        </div>
+      </div>
+      <div class="row offset-md-2">
+        <div class="col">
           <h1 class="text-white">RSS агрегатор</h1>
           <p class="text-white">Начните читать RSS сегодня! Это легко, это красиво.</p>
-          <form><input type="text"></input><input type="submit" class="btn btn-primary"></input></form>
+      <form>
+      <div class="row">
+        <div class="col">
+          <input class="form-control form-control-lg inputForm" type="text" name="text" id="textRSS" placeholder="Ссылка RSS" required>
         </div>
+        <div class="col">
+          <button class="btn btn-primary btn-lg btn-rss" type="submit" disabled data-bs-toggle="button">Добавить</button>
+        </div>
+      </form>
+      <div class="row mb-2">
+        <div class="col text-white text-opacity-50">Пример: https://ru.hexlet.io/lessons.rss</div>
+      </div>
+      <div class="row mb-2">
+        <div class="col text-white text-opacity-50 result"></div>
+      </div>
       </div>
     </div>
   </body>
