--- a/template.html
+++ b/template.html
@@ -24,14 +24,14 @@
           <input class="form-control form-control-lg inputForm" type="text" name="text" id="textRSS" placeholder="Ссылка RSS" required>
         </div>
         <div class="col">
-          <button class="btn btn-primary btn-lg btn-rss" type="submit" disabled data-bs-toggle="button">Добавить</button>
+          <button class="btn btn-primary btn-lg btn-rss" type="submit" data-bs-toggle="button">Добавить</button>
         </div>
       </form>
       <div class="row mb-2">
         <div class="col text-white text-opacity-50">Пример: https://ru.hexlet.io/lessons.rss</div>
       </div>
       <div class="row mb-2">
-        <div class="col text-white text-opacity-50 result"></div>
+        <div class="col text-white text-opacity-50 result"> </div>
       </div>
       </div>
     </section>
