--- a/template.html
+++ b/template.html
@@ -34,8 +34,12 @@
     </section>
     <section class="container-fluid container-xxl p-5">
       <div class="row">
-        <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
-        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+        <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
+          <div class="card border-0"></div>
+        </div>
+        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
+          <div class="card border-0"></div>
+        </div>
       </div>
     </section>
   </main>
