--- a/template.html
+++ b/template.html
@@ -7,13 +7,25 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <script type="module" src="./src/index.js"></script>
-    <main class="flex-grow-1">
-    <section class="container-fluid bg-dark bg-gradient p-5">
-      <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto">
-          <button type="button" class="btn btn-outline-light btn-sm btn-lan"></button>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidde="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-break">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью <a>
+            <button type="button" class="btn btn-secondary close-article" data-bs-dismiss="modal">Закрыть</button>
+          </div>
         </div>
       </div>
+    </div>
+    <main class="flex-grow-1">
+    <section class="container-fluid bg-dark bg-gradient p-5">
       <div class="col-md-10 col-lg-8 mx-auto text-white">
           <h1 class="display-3 mb-0">RSS агрегатор</h1>
           <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
@@ -30,7 +42,7 @@
         </div>
         </div>
       </form>
-        <p class="mt-2 mb-0 text-opacity-50">Пример: https://ru.hexlet.io/lessons.rss</p>
+        <p class="mt-2 mb-0 text-secondary">Пример: https://news.un.org/feed/subscribe/ru/news/topic/culture-and-education/feed/rss.xml</p>
         <p class="feedback m-0 position-absolute small result"></p>
       </div>
       </div>
