fix html template.html

--- a/template.html
+++ b/template.html
@@ -4,21 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RSS-агрегатор</title>
+    <script type="module" src="./src/index.js"></script>
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <script type="module" src="./src/index.js"></script>
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidde="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
+            <h5 class="modal-title"></h5>
             <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body text-break">
-            <p>Modal body text goes here.</p>
-          </div>
+          <div class="modal-body text-break"></div>
           <div class="modal-footer">
-            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью <a>
+            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
             <button type="button" class="btn btn-secondary close-article" data-bs-dismiss="modal">Закрыть</button>
           </div>
         </div>
@@ -26,23 +24,24 @@
     </div>
     <main class="flex-grow-1">
     <section class="container-fluid bg-dark bg-gradient p-5">
+      <div class="row">
       <div class="col-md-10 col-lg-8 mx-auto text-white">
           <h1 class="display-3 mb-0">RSS агрегатор</h1>
           <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
-      <form action class="text-body">
+      <form action class="rss-form text-body">
       <div class="row">
         <div class="col">
         <div class="form-floating">
-          <input id="url-input" autofocus required class="form-control form-control-lg inputForm" type="text" name="text" id="textRSS" placeholder="Ссылка RSS" autocomplete="off">
+          <input id="url-input" autofocus required name="url" aria-label="url" class="form-control form-control-lg inputForm w-100" placeholder="Ссылка RSS" autocomplete="off">
           <label for="url-input">Ссылка RSS</label>
         </div>
         </div>
         <div class="col-auto">
-          <button class="btn btn-primary btn-lg btn-rss" type="submit" data-bs-toggle="button">Добавить</button>
+          <button type="submit" aria-label="add" class="h-100 btn btn-primary btn-lg btn-rss px-sm-5" data-bs-toggle="button">Добавить</button>
         </div>
         </div>
       </form>
-        <p class="mt-2 mb-0 text-secondary">Пример: https://news.un.org/feed/subscribe/ru/news/topic/culture-and-education/feed/rss.xml</p>
+        <p class="mt-2 mb-0 text-muted">Пример: https://news.un.org/feed/subscribe/ru/news/topic/culture-and-education/feed/rss.xml</p>
         <p class="feedback m-0 position-absolute small result"></p>
       </div>
       </div>
